--- a/package.json
+++ b/package.json
@@ -19,5 +19,16 @@
   ],
   "author": "Walmyr Filho <wlsf82@gmail.com> (https://walmyr.dev/)",
   "license": "MIT",
-  "homepage": "https://github.com/wlsf82/cypress-basico-v2#readme"
+  "homepage": "https://github.com/wlsf82/cypress-basico-v2#readme",
+  "devDependencies": {
+    "cypress": "^13.7.3"
+  },
+  "scripts": {
+    "cy:open": "cypress open",
+    "test": "cypress run"
+  },
+  "scripts": {
+    "cy:open": "cypress open",
+    "test": "cypress run"
+  }
 }
