--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "scripts": {
     "cy:open": "cypress open",
-    "test": "cypress run"
+    "cy:open:mobile": "cypress open --config viewportWidth=410 viewportHeight=860",
+    "test": "cypress run",
+    "test:mobile": "cypress open --config viewportWidth=410 viewportHeight=860"
   },
   "scripts": {
     "cy:open": "cypress open",
