--- a/package.json
+++ b/package.json
@@ -27,10 +27,6 @@
     "cy:open": "cypress open",
     "cy:open:mobile": "cypress open --config viewportWidth=410 viewportHeight=860",
     "test": "cypress run",
-    "test:mobile": "cypress open --config viewportWidth=410 viewportHeight=860"
-  },
-  "scripts": {
-    "cy:open": "cypress open",
-    "test": "cypress run"
+    "test:mobile": "cypress run --config viewportWidth=410 viewportHeight=860"
   }
 }
